Fixed header on collapse

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -98,6 +98,19 @@ body {
   padding: 20px 0;
 }*/
 
+.navbar-toggle {
+  position: relative;
+  float: right;
+  padding: 0;
+  margin: 0;
+  margin-right: 15px;
+/*  margin-bottom: 8px;
+  background-color: transparent;
+  background-image: none;
+  border: 1px solid transparent;
+  border-radius: 4px;*/
+}
+
 .navbar-default {
   border-color: transparent;
   background-color: rgba(218, 218, 218, 0.2);
